Integrate postgre database

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,5 @@
 tracker-env/
 congfig.py
-myapp/models.pyc
-myapp/__init__.pyc
-run.pyc
-tests/__pycache__
-tests/.pytest_cache
-.pytest_cache
-tests/__init__.pyc
-tests/test_run.pyc
-myapp/views.pyc
-myapp/__pycache__
-__pycache__
+*__pycache__
+*.pytest_cache
+*.pyc
