--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - pytest tests/test_run.py
+  - pytest tests/test_views.py
+  - pytest tests/test_views.py
   - nose2 --with-coverage
 
 after_success:
